[package]
name = "tokopedia-client-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
build_id = "0.2.1"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2"
serde_json = "1.0"
reqwest = "0.11.18"
once_cell = "1.18.0"
const_format = { version = "0.2.31", features = ["rust_1_51"] }
